--- a/emmet to gain some time/style.css
+++ b/emmet to gain some time/style.css
@@ -154,6 +154,7 @@
   nav>ul{
     list-style-position: inside;
     padding-left: 10px;
+    margin-right: 30px;
     font-family: 'Courier New', Courier, monospace;
     font-style: normal;
     color: white;
