--- a/emmet to gain some time/style.css
+++ b/emmet to gain some time/style.css
@@ -28,7 +28,7 @@
   }
   .card{
     color:var(--clr-neutral-100) ;
-    background-image: url('C:\Users\Neymar\Desktop\Web studies\html-css\emmet to gain some time\images\pexels-francesco-ungaro-1526717.jpg');
+    background-image: url(https://github.com/neymarvaz/html-css/blob/main/emmet%20to%20gain%20some%20time/images/pexels-francesco-ungaro-1526717.jpg);
     background-size: 200px;
     padding: 5rem 0 0;
     max-width: 35ch;
@@ -143,7 +143,7 @@
     border-bottom-right-radius: 0px;
     border-top-left-radius: 0px;
     margin: 0px;
-    background-image: url('C:\Users\Neymar\Desktop\Web studies\html-css\emmet to gain some time\images\pexels-francesco-ungaro-1526717.jpg');
+    background-image: url(https://github.com/neymarvaz/html-css/blob/main/emmet%20to%20gain%20some%20time/images/pexels-francesco-ungaro-1526717.jpg);
     background-position: center center;
     background-size: 1300px;
     background-repeat: no-repeat;
